2003-07-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-ccl.el (w3m-ccl-write-repeat): Use a literal list of unibyte
	character sets, instead of calling `charset-bytes', in order to
	avoid difference between FSF Emacs and XEmacs.
	(w3m-euc-japan-encoder, w3m-iso-latin-1-encoder): Do not
	overwrite, if they have already been defined.

2003-07-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-examine-modules): Ignore w3m-ccl.el when
	XEmacs doesn't provide the mule feature.

2003-07-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-correct-charset-alist): New user option.
	(w3m-correct-charset): New inline macro.
	(w3m-detect-meta-charset): New function.
	(w3m-decode-buffer): Use `w3m-correct-charset' and
	`w3m-detect-meta-charset'.
	(w3m-create-page): Set `charset' to `w3m-current-content-charset'
	if it is nil.
	(w3m-region): If `charset' is nil, check `content-charset' in
	`META Tag'.

2003-07-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-ccl.el (toplevel): Add autoload for `charset-id' defined at
	w3m-om.el.
	(w3m-ccl-write-repeat): Simplified.
	(w3m-ccl-write-euc-japan-character): Set nil, when
	`read-multibyte-character' is not available.
	(w3m-ccl-write-iso-latin-1-character): Ditto.

	* w3m-om.el: Remove redundant `function'.
	(w3m-om-character-set-alist): New variable.
	(charset-id): New function.

	* w3m.el (w3m-input-coding-system): Change its default value for
	Mule2.3 and Emacsen without Mule.

2003-07-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el (w3mhack-examine-modules): Ignore w3m-ccl.el when
	ccl.el is missing.

	* w3m-e21.el (w3m-ccl-get-ucs-codepoint-with-emacs-unicode):
	Import from w3m-ccl.el.

	* w3m-ucs.el (w3m-ccl-get-ucs-codepoint-with-mule-ucs): Import
	from w3m-ccl.el.

	* w3m-ccl.el: Export the above constants.

	* w3m.el (w3m-retrieve-and-render): Check current content charset
	before `w3m-create-page' is called.

2003-07-17  ARISAWA Akihiro <ari@mbf.sphere.ne.jp>