@@ -82,45 +82,63 @@ CODING-SYSTEM, DECODER and ENCODER must be symbol."
 
 (eval-and-compile
   (defconst w3m-ccl-get-ucs-codepoint-with-emacs-unicode
-    `(,@(if (get 'utf-translation-table-for-encode 'translation-table-id)
-	    '((translate-character utf-translation-table-for-encode r1 r0)))
-	(if (r1 == ,(charset-id 'latin-iso8859-1))
-	    ((r1 = (r0 + 128)))
-	  (if (r1 == ,(charset-id 'mule-unicode-0100-24ff))
+    `((if (r1 == ,(charset-id 'latin-iso8859-1))
+	  ((r1 = (r0 + 128)))
+	(if (r1 == ,(charset-id 'mule-unicode-0100-24ff))
+	    ((r1 = ((((r0 & #x3f80) >> 7) - 32) * 96))
+	     (r0 &= #x7f)
+	     (r1 += (r0 + 224)))	; 224 == -32 + #x0100
+	  (if (r1 == ,(charset-id 'mule-unicode-2500-33ff))
 	      ((r1 = ((((r0 & #x3f80) >> 7) - 32) * 96))
 	       (r0 &= #x7f)
-	       (r1 += (r0 + 224)))	; 224 == -32 + #x0100
-	    (if (r1 == ,(charset-id 'mule-unicode-2500-33ff))
+	       (r1 += (r0 + 9440)))	; 9440 == -32 + #x2500
+	    (if (r1 == ,(charset-id 'mule-unicode-e000-ffff))
 		((r1 = ((((r0 & #x3f80) >> 7) - 32) * 96))
 		 (r0 &= #x7f)
-		 (r1 += (r0 + 9440)))	; 9440 == -32 + #x2500
-	      (if (r1 == ,(charset-id 'mule-unicode-e000-ffff))
-		  ((r1 = ((((r0 & #x3f80) >> 7) - 32) * 96))
-		   (r0 &= #x7f)
-		   (r1 += (r0 + 57312)))	; 57312 == -32 + #xe000
-		,(if (fboundp 'ccl-compile-lookup-character)
-		     '((lookup-character utf-subst-table-for-encode r1 r0)
-		       (if (r7 == 0)	; lookup failed
-			   (r1 = #xfffd)))
-		   '((r1 = #xfffd)))))))
-	(if (r1 == #xfffd)
-	    (write-repeat ?~)		; unknown character.
-	  (r0 = r1)))
+		 (r1 += (r0 + 57312)))	; 57312 == -32 + #xe000
+	      ,(if (fboundp 'ccl-compile-lookup-character)
+		   '((lookup-character utf-subst-table-for-encode r1 r0)
+		     (if (r7 == 0)	; lookup failed
+			 (r1 = #xfffd)))
+		 '((r1 = #xfffd)))))))
+      (if (r1 == #xfffd)
+	  (write-repeat ?~)		; unknown character.
+	(r0 = r1)))
     "CCL program to convert multibyte char to ucs with emacs-unicode."))
 
-(define-ccl-program w3m-euc-japan-encoder
-  `(4
-    (loop
-     ,@w3m-ccl-write-euc-japan-character
-     ,@w3m-ccl-get-ucs-codepoint-with-emacs-unicode
-     ,@w3m-ccl-generate-ncr)))
+(if (get 'utf-translation-table-for-encode 'translation-table-id)
+    ;; For Emacs 21.3.50 and later.
+    (define-ccl-program w3m-euc-japan-encoder
+      `(4
+	(loop
+	 ,@w3m-ccl-write-euc-japan-character
+	 (translate-character utf-translation-table-for-encode r1 r0)
+	 ,@w3m-ccl-get-ucs-codepoint-with-emacs-unicode
+	 ,@w3m-ccl-generate-ncr)))
+  ;; For Emacs 21.[123] that does not have `utf-translation-table-for-encode'.
+  (define-ccl-program w3m-euc-japan-encoder
+    `(4
+      (loop
+       ,@w3m-ccl-write-euc-japan-character
+       ,@w3m-ccl-get-ucs-codepoint-with-emacs-unicode
+       ,@w3m-ccl-generate-ncr))))
 
-(define-ccl-program w3m-iso-latin-1-encoder
-  `(4
-    (loop
-     ,@w3m-ccl-write-iso-latin-1-character
-     ,@w3m-ccl-get-ucs-codepoint-with-emacs-unicode
-     ,@w3m-ccl-generate-ncr)))
+(if (get 'utf-translation-table-for-encode 'translation-table-id)
+    ;; For Emacs 21.3.50 and later.
+    (define-ccl-program w3m-iso-latin-1-encoder
+      `(4
+	(loop
+	 ,@w3m-ccl-write-iso-latin-1-character
+	 (translate-character utf-translation-table-for-encode r1 r0)
+	 ,@w3m-ccl-get-ucs-codepoint-with-emacs-unicode
+	 ,@w3m-ccl-generate-ncr)))
+  ;; For Emacs 21.[123] that does not have `utf-translation-table-for-encode'.
+  (define-ccl-program w3m-iso-latin-1-encoder
+    `(4
+      (loop
+       ,@w3m-ccl-write-iso-latin-1-character
+       ,@w3m-ccl-get-ucs-codepoint-with-emacs-unicode
+       ,@w3m-ccl-generate-ncr))))
 
 (unless (fboundp 'w3m-ucs-to-char)
   (defun w3m-ucs-to-char (codepoint)
